--- a/style/style.css
+++ b/style/style.css
@@ -17,10 +17,9 @@
 /* banner section start */
 
 .banner-section {
-  min-height: 100px;
   margin-top: 50px;
   background-color: rgba(0, 0, 0, 0.5);
-  background-image: url(/images/Banner\ Image.png);
+  background-image: url(../images/Banner\ Image.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -57,3 +56,50 @@
 }
 
 /* banner section end */
+
+/* 65% section start */
+.second-section {
+  margin-top: 100px;
+  width: 802.9px;
+  height: 500px;
+  min-height: 400px;
+}
+.second-section-content {
+  text-align: center;
+}
+.second-section-content .second-first-title {
+  color: #f00;
+  text-align: center;
+  font-family: Inter;
+  font-size: 88px;
+  font-style: normal;
+  font-weight: 700;
+}
+.second-section-content .second-title {
+  color: #f00;
+  text-align: center;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  margin-top: 48px;
+}
+.second-section-content .third-title {
+  color: #070211;
+  text-align: center;
+  font-family: Inter;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  margin-top: 16px;
+}
+.image-container {
+  width: 802.9px;
+  height: 500px;
+  margin-top: 48px;
+}
+.image-container img {
+  width: 100%;
+  height: 100%;
+}
+/* 65% section end */
