--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,7 @@
 .banner-section {
   margin-top: 50px;
   background-color: rgba(0, 0, 0, 0.5);
-  background-image: url(../images/banner-img.png);
+  background-image: url(/images/banner-img.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
