--- a/style/style.css
+++ b/style/style.css
@@ -61,8 +61,7 @@
 .second-section {
   margin-top: 100px;
   width: 802.9px;
-  height: 500px;
-  min-height: 400px;
+  height: 800px;
 }
 .second-section-content {
   text-align: center;
@@ -103,3 +102,60 @@
   height: 100%;
 }
 /* 65% section end */
+
+/* midnight party section start */
+.midnight-section {
+  background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
+    url("../images/party.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 16px;
+  margin-top: 100px;
+  display: flex;
+  gap: 30px;
+}
+.midnight-content {
+  width: 60%;
+  color: #fff;
+  padding: 100px;
+}
+.midnight-content .midnight-title {
+  color: #fff;
+  font-family: Merriweather;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 88px;
+  letter-spacing: 7.04px;
+  width: 600px;
+}
+.midnight-content .midnight-description {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  margin-top: 24px;
+}
+.midnight-content .midnight-btn {
+  color: #fff;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  margin-top: 48px;
+}
+.midnight-img {
+  width: 40%;
+  display: flex;
+  align-items: center;
+}
+.midnight-img img {
+  width: 319.83px;
+  height: 464.662px;
+}
+/* midnight party section end */
