--- a/style/style.css
+++ b/style/style.css
@@ -219,3 +219,83 @@
   border: none;
 }
 /* 4th section end */
+
+/* coming soon section start */
+.coming-soon {
+  margin-top: 100px;
+}
+.coming-soon-content {
+  display: flex;
+  gap: 50px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.coming-soon-content .coming-first-content {
+  width: 33%;
+}
+.coming-first-content .first-title {
+  color: #f00;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.coming-first-content .second-title {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: capitalize;
+  margin-top: 16px;
+}
+.coming-first-content .first-description {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  width: 393px;
+  margin-top: 22px;
+}
+.coming-soon-content .image {
+  border: 15px solid red;
+  border-radius: 463px;
+  padding: 50px;
+}
+.image img {
+  width: 364.844px;
+  height: 364.844px;
+  border-radius: 364.844px;
+}
+.coming-soon-content .coming-last-content {
+  width: 33%;
+}
+.coming-last-content .last-title {
+  color: #f00;
+  font-family: Inter;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.coming-last-content .last-description {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  width: 276px;
+  margin-top: 16px;
+}
+.coming-last-content img {
+  width: 140px;
+  height: 140px;
+  margin-top: 43px;
+}
+/* coming soon section end */
