--- a/style/style.css
+++ b/style/style.css
@@ -274,6 +274,7 @@
 }
 .coming-soon-content .coming-last-content {
   width: 33%;
+  padding-left: 50px;
 }
 .coming-last-content .last-title {
   color: #f00;
@@ -299,3 +300,84 @@
   margin-top: 43px;
 }
 /* coming soon section end */
+
+/* holidays sale section start */
+.holidays {
+  margin-top: 100px;
+  height: 1000px;
+  position: relative;
+}
+.holidays-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.holidays-content .holidays-short-title {
+  color: #070211;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.holidays-content .holidays-sale {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  margin-top: 16px;
+}
+.holidays-content .sale {
+  color: #f00;
+  text-align: center;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+}
+.holidays-content .holidays-description {
+  color: rgba(7, 2, 17, 0.6);
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px;
+  width: 1068px;
+  margin-top: 28px;
+}
+.holidays-images {
+  width: 1320px;
+  height: 229px;
+  border-radius: 16px 0px 16px 16px;
+  background: #f00;
+  position: absolute;
+  top: 77%;
+}
+.gift-box {
+  position: absolute;
+  top: 30%;
+  display: flex;
+}
+.girl-image {
+  width: 429px;
+  height: 433px;
+  border-radius: 16px 16px 0px 0px;
+  position: absolute;
+  left: 112%;
+  top: 6%;
+  z-index: -1;
+}
+.girl-image img {
+  width: 100%;
+  height: 100%;
+}
+.discount {
+  position: absolute;
+  bottom: 30%;
+  left: 55%;
+}
+/* holidays sale section end */
